--- a/JobApplyTracker/views/add-job.ejs
+++ b/JobApplyTracker/views/add-job.ejs
@@ -1,32 +1,33 @@
 <%- include('partials/header'); -%>
 
 <body>
-  <div class="container">
-    <h1>Add a New Job</h1>
+  <h1 id="job-add">Create job</h1>
+
+  <div class="container-job-dets">
     <form action="/jobs" method="POST">
       <fieldset>
-        <legend>Job Details</legend>
         <div class="form-group">
           <label for="companyName">Company Name:</label>
           <input type="text" id="companyName" name="companyName" required>
-        </div>
-        <div class="form-group">
           <label for="title">Title:</label>
           <input type="text" id="title" name="title">
-        </div>
-        <div class="form-group">
           <label for="website">Website:</label>
           <input type="url" id="website" name="website" required>
-        </div>
-        <div class="form-group">
+          <p id="contact-inf-p">Contact Information</p>
+          <label for="contactName">Contact Name:</label>
+          <input type="text" id="contactName" name="contactName">
+          <label for="contactEmail">Contact Email:</label>
+          <input type="email" id="contactEmail" name="contactEmail">
+          <label for="contactPhone">Contact Phone:</label>
+          <input type="tel" id="contactPhone" name="contactPhone">
+          <label for="address">Address:</label>
+          <input type="text" id="address" name="address">
           <label for="origin">Origin:</label>
           <select id="origin" name="origin" required>
             <option value="">Select Origin</option>
             <option value="Candidature spontanée">Candidature spontanée</option>
             <option value="Job offer">Job offer</option>
           </select>
-        </div>
-        <div class="form-group">
           <label for="status">Status:</label>
           <select id="status" name="status" required>
             <option value="">Select Status</option>
@@ -35,38 +36,17 @@
             <option value="Negative">Negative</option>
             <option value="Interview">Interview</option>
           </select>
-        </div>
-      </fieldset>
-
-      <fieldset>
-        <legend>Contact Information</legend>
-        <div class="form-group">
-          <label for="contactName">Contact Name:</label>
-          <input type="text" id="contactName" name="contactName">
-        </div>
-        <div class="form-group">
-          <label for="contactEmail">Contact Email:</label>
-          <input type="email" id="contactEmail" name="contactEmail">
-        </div>
-        <div class="form-group">
-          <label for="contactPhone">Contact Phone:</label>
-          <input type="tel" id="contactPhone" name="contactPhone">
-        </div>
-        <div class="form-group">
-          <label for="address">Address:</label>
-          <input type="text" id="address" name="address">
-        </div>
-      </fieldset>
-
-      <fieldset>
-        <legend>Additional Information</legend>
-        <div class="form-group">
+          <p>Additional Information</p>
           <label for="comments">Comments:</label>
           <textarea id="comments" name="comments" rows="4"></textarea>
+
         </div>
+      <button type="submit">Add Job</button>
+
       </fieldset>
 
-      <button type="submit">Add Job</button>
+         
+          
     </form>
   </div>
 </body>
