commit_myprofile_css_done_MoL

--- a/JobApplyTracker/views/partials/header.ejs
+++ b/JobApplyTracker/views/partials/header.ejs
@@ -13,7 +13,7 @@
     <nav>
       <li><a href="/dashboard">Dashboard</a></li>
       <li><a href="/jobs/add-job">Add Job</a></li>
-      <li><a href="/profile">Profile</a></li>
+      <li><a href="/profile">My Profile</a></li>
       <li><a href="/logout">Logout</a></li>
 
     </nav>
