--- a/JobApplyTracker/public/style.scss
+++ b/JobApplyTracker/public/style.scss
@@ -44,11 +44,15 @@ body {
     h1#job-add {
         display: flex;
         justify-content: center;
-    }
-    h1#job-add {
         margin: 10px 0;
     }
-    
+   
+    h1#profile-title {
+        display: flex;
+        justify-content: center;
+        margin: 30px 0;
+        margin-bottom: 40px;
+    }
 li {
     list-style: none;
 }
@@ -225,7 +229,62 @@ nav {
 
 
 }
+.container-profile {
+    display: flex;
+    justify-content: center;
+    img.profile-picture {
+        width: 500px;
+        /* height: 300; */
+    }
+}
+/* General button styling */
+.btn {
+    display: inline-block;
+    padding: 10px 20px;
+    margin: 10px 0;
+    font-size: 16px;
+    color: #fff;
+    background-color: #007bff;
+    border: none;
+    border-radius: 5px;
+    text-align: center;
+    text-decoration: none;
+    cursor: pointer;
+}
 
+.btn:hover {
+    background-color: #0056b3;
+}
+
+.btn-download {
+    background-color: #28a745;
+}
+
+.btn-download:hover {
+    background-color: #218838;
+}
+
+.btn-update {
+    background-color: #ffc107;
+}
+
+.btn-update:hover {
+    background-color: #e0a800;
+}
+
+.btn-back {
+    background-color: #6c757d;
+}
+
+.btn-back:hover {
+    background-color: #5a6268;
+}
+
+.actions-profile {
+    display: flex;
+    justify-content: center;
+    margin-top: 30px;
+}
 
 }
 footer {
