commit_edit_job_work

--- a/JobApplyTracker/views/job-detail.ejs
+++ b/JobApplyTracker/views/job-detail.ejs
@@ -16,6 +16,7 @@
       <p id="origin-info"><%= job.origin %></p>
       <p id="stats-info">Status: <%= job.status %></p>
       <p id="comments-job">Comments: <%= job.comments %></p>
+      <a href="/jobs/edit/<%= job._id %>" class="btn btn-edit">Edit Job</a>
     </div>
   </div>
 </body>
