--- a/JobApplyTracker/public/style.scss
+++ b/JobApplyTracker/public/style.scss
@@ -285,7 +285,14 @@ nav {
     justify-content: center;
     margin-top: 30px;
 }
-
+h1#edit-title-job {
+    display: flex;
+    justify-content: center;
+}
+.container-job-edit {
+    display: flex;
+    justify-content: center;
+}
 }
 footer {
     text-align: center;
