--- a/JobApplyTracker/public/style.css
+++ b/JobApplyTracker/public/style.css
@@ -39,7 +39,10 @@ body {
   height: 100vh;
   color: #BFA181;
   background-color: #0A1828;
-  /* General button styling */
+  /* Ensure this is included in your CSS file */
+}
+body input {
+  border-radius: 5px;
 }
 body h1#job-add {
   display: flex;
@@ -108,25 +111,28 @@ body #job-container {
   flex-wrap: wrap;
   gap: 15px;
 }
+body .container-job-edit {
+  position: fixed;
+}
 body #jobs-list {
-  display: flex;
-  flex-wrap: wrap;
-  gap: 15px;
+  gap: 30px;
+  max-width: 900px;
+  display: grid;
+  /* flex-wrap: wrap; */
+  max-width: 900px;
+  grid-template-columns: 1fr 1fr 1fr;
 }
 body #jobs-list li {
   background-color: #ffffff;
   border: 1px solid #ddd;
   border-radius: 8px;
   padding: 15px;
-  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-  list-style-type: none;
-  flex: 1 1 300px;
-  max-width: 100%;
 }
 body .see-more-link {
   color: #007bff;
   font-weight: bold;
   text-decoration: none;
+  text-decoration: underline;
 }
 body .see-more-link:hover {
   text-decoration: underline; /* Underline on hover */
@@ -239,7 +245,7 @@ body .btn-update:hover {
   background-color: #e0a800;
 }
 body .btn-back {
-  background-color: #6c757d;
+  background-color: #007bff;
 }
 body .btn-back:hover {
   background-color: #5a6268;
@@ -256,6 +262,71 @@ body h1#edit-title-job {
 body .container-job-edit {
   display: flex;
   justify-content: center;
+}
+body .container-job-edit input {
+  width: 100%;
+}
+body .container-job-edit hr#first-hr {
+  margin: 20px 0;
+}
+body .container-job-edit hr#sec-hr {
+  margin: 20px 0;
+}
+body .container-job-edit legend#info-employer {
+  margin-bottom: 15px;
+}
+body div#job-container {
+  max-width: 900px;
+}
+body button#btn-update-job {
+  display: inline-block;
+  width: 100%;
+  padding: 10px 20px;
+  margin: 10px 0;
+  font-size: 16px;
+  color: #fff;
+  background-color: #007bff;
+  border: none;
+  border-radius: 5px;
+  text-align: center;
+  text-decoration: none;
+  cursor: pointer;
+  background-color: #0056b3;
+}
+body .job-item {
+  position: relative;
+  padding: 15px;
+  border: 1px solid #ccc;
+  margin-bottom: 15px;
+  border-radius: 5px;
+  display: flex; /* Use Flexbox for layout */
+  flex-direction: column; /* Stack items vertically */
+  gap: 10px; /* Add space between items */
+  background-color: #f9f9f9;
+}
+body .status-rectangle {
+  padding: 5px 10px;
+  border-radius: 4px;
+  font-size: 12px;
+  font-weight: bold;
+  color: #fff;
+  margin-right: 10px;
+  text-align: center;
+  position: absolute;
+  right: -30px;
+  top: -10px;
+}
+body .status-rectangle.interested {
+  background-color: #ffeb3b; /* Yellow */
+}
+body .status-rectangle.cv-sent {
+  background-color: #2196f3; /* Blue */
+}
+body .status-rectangle.negative {
+  background-color: #f44336; /* Red */
+}
+body .status-rectangle.interview {
+  background-color: #4caf50; /* Green */
 }
 
 footer {
