--- a/JobApplyTracker/views/edit-job.ejs
+++ b/JobApplyTracker/views/edit-job.ejs
@@ -5,7 +5,6 @@
 
   <div class="container-job-edit">
     <form action="/jobs/edit/<%= job._id %>" method="POST" id="edit-form">
-        <legend>Job Details</legend>
         <div class="form-group">
           <label for="title">Title:</label>
           <input type="text" id="title" name="title" value="<%= job.title %>" required>
@@ -18,21 +17,8 @@
           <label for="website">Website:</label>
           <input type="url" id="website" name="website" value="<%= job.website %>" required>
         </div>
-        <div class="form-group">
-          <label for="origin">Origin:</label>
-          <input type="text" id="origin" name="origin" value="<%= job.origin %>" required>
-        </div>
-        <div class="form-group">
-          <label for="status">Status:</label>
-          <select id="status" name="status" required>
-            <option value="Interested" <%= job.status === 'Interested' ? 'selected' : '' %>>Interested</option>
-            <option value="CV sent" <%= job.status === 'CV sent' ? 'selected' : '' %>>CV sent</option>
-            <option value="Negative" <%= job.status === 'Negative' ? 'selected' : '' %>>Negative</option>
-            <option value="Interview" <%= job.status === 'Interview' ? 'selected' : '' %>>Interview</option>
-          </select>
-        </div>
-
-        <legend>Contact Information</legend>
+        <hr id="first-hr">
+        <legend id="info-employer">Contact of the employer</legend>
         <div class="form-group">
           <label for="contactName">Contact Name:</label>
           <input type="text" id="contactName" name="contactName" value="<%= job.contactName %>">
@@ -49,14 +35,24 @@
           <label for="address">Address:</label>
           <input type="text" id="address" name="address" value="<%= job.address %>">
         </div>
-
+        <hr id="sec-hr">
+       
+        <div class="form-group">
+          <label for="status">Status:</label>
+          <select id="status" name="status" required>
+            <option value="Interested" <%= job.status === 'Interested' ? 'selected' : '' %>>Interested</option>
+            <option value="CV sent" <%= job.status === 'CV sent' ? 'selected' : '' %>>CV sent</option>
+            <option value="Negative" <%= job.status === 'Negative' ? 'selected' : '' %>>Negative</option>
+            <option value="Interview" <%= job.status === 'Interview' ? 'selected' : '' %>>Interview</option>
+          </select>
+        </div>
         <legend>Additional Information</legend>
         <div class="form-group">
           <label for="comments">Comments:</label>
           <textarea id="comments" name="comments" rows="4"><%= job.comments %></textarea>
         </div>
 
-      <button type="submit">Update Job</button>
+      <button type="submit" id="btn-update-job">Update Job</button>
     </form>
   </div>
 </body>
