--- a/JobApplyTracker/views/profile.ejs
+++ b/JobApplyTracker/views/profile.ejs
@@ -21,7 +21,8 @@
 
             <!-- Button to change the password -->
             <form action="/profile/change-password" method="POST">
-                <button type="submit" class="btn btn-update">Change Password</button>
+<!-- Button to change the password -->
+<a href="/profile/change-password" class="btn btn-update">Change Password</a>
             </form>
         </div>
     </div>
