--- a/JobApplyTracker/public/style.scss
+++ b/JobApplyTracker/public/style.scss
@@ -212,8 +212,90 @@ nav {
         margin-bottom: 10px;
     }
 }
-
-
+h1#change-password-title {
+    display: flex;
+    justify-content: center;
+    margin: 20px 0px;
+}
+button#btn-addjob {
+    width: 100%;
+    margin-top: 20px;
+    margin-bottom: 20px;
+    background-color: #0056b3;
+    color: white;
+    border-radius: 5px;
+    border: none;
+    padding-top: 10px;
+    padding-bottom: 10px;
+}
+.container-changepass {
+    display: flex;
+    justify-content: center;
+    form#form-changepass {
+        max-width: 400px;
+        #btn-changepass{
+            width: 100%;
+            margin-top: 20px;
+            margin-bottom: 20px;
+            background-color: #0056b3;
+            color: white;
+            border-radius: 5px;
+            border: none;
+            padding-top: 10px;
+            padding-bottom: 10px;
+        }
+    }
+    input {
+        width: 100%;
+    }
+}
+.head-nav {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 10px 20px;
+    color: #BFA181;
+  }
+  
+  nav {
+    display: flex;
+    list-style: none;
+    gap: 20px;
+    align-items: center;
+  }
+  
+  nav li {
+    display: inline;
+  }
+  
+  nav li a {
+    text-decoration: none;
+    color: #BFA181;
+    font-size: 16px;
+    font-weight: 500;
+  }
+  
+  .profile-link {
+    display: flex;
+    align-items: center;
+  }
+  
+  .profile-img {
+    width: 35px; /* Adjust as needed */
+    height: 35px; /* Adjust as needed */
+    border-radius: 50%;
+    margin-right: 8px;
+    object-fit: cover;
+  }
+  
+  #logo {
+    height: 50px;
+  }
+  
+  #logo-link {
+    display: inline-block;
+  }
+  
 .container-job-dets {
     display: flex;
     justify-content: center;
