--- a/JobApplyTracker/views/add-job.ejs
+++ b/JobApplyTracker/views/add-job.ejs
@@ -41,7 +41,7 @@
           <textarea id="comments" name="comments" rows="4"></textarea>
 
         </div>
-      <button type="submit">Add Job</button>
+      <button type="submit" id="btn-addjob">Add Job</button>
 
       </fieldset>
 
