--- a/JobApplyTracker/public/style.css
+++ b/JobApplyTracker/public/style.css
@@ -284,12 +284,25 @@ body .container-job-dets p#contact-inf-p {
   margin: 10px 0;
   text-decoration: underline;
 }
-body .container-profile {
+body h1#register-title {
+  display: flex;
+  justify-content: center;
+  margin: 30px;
+}
+body .container-register {
   display: flex;
   justify-content: center;
 }
+body .container-register input {
+  width: 100%;
+}
+body .container-profile {
+  display: flex;
+  justify-content: center;
+  gap: 20px;
+}
 body .container-profile img.profile-picture {
-  width: 500px;
+  max-width: 300px;
   /* height: 300; */
 }
 body .btn {
@@ -341,6 +354,8 @@ body .container-job-edit {
 }
 body .container-job-edit input {
   width: 100%;
+  border: none;
+  border-radius: 5px;
 }
 body .container-job-edit hr#first-hr {
   margin: 20px 0;
@@ -350,6 +365,20 @@ body .container-job-edit hr#sec-hr {
 }
 body .container-job-edit legend#info-employer {
   margin-bottom: 15px;
+}
+body #btn-register {
+  width: 100%;
+  display: inline-block;
+  padding: 10px 20px;
+  margin: 10px 0;
+  font-size: 16px;
+  color: #fff;
+  background-color: #007bff;
+  border: none;
+  border-radius: 5px;
+  text-align: center;
+  text-decoration: none;
+  cursor: pointer;
 }
 body div#job-container {
   max-width: 900px;
