--- a/JobApplyTracker/views/partials/header.ejs
+++ b/JobApplyTracker/views/partials/header.ejs
@@ -14,6 +14,8 @@
       <li><a href="/dashboard">Dashboard</a></li>
       <li><a href="/jobs/add-job">Add Job</a></li>
       <li><a href="/profile">My Profile</a></li>
+      <li><a href="/login">Login</a></li>
+      <li><a href="/register">Register</a></li>
       <li><a href="/logout">Logout</a></li>
 
     </nav>
