--- a/JobApplyTracker/views/register.ejs
+++ b/JobApplyTracker/views/register.ejs
@@ -1,9 +1,11 @@
 <%- include('partials/header'); %>
 
 <body>
-    <div class="container">
+    <h1 id="register-title">Register</h1>
+
+    <div class="container-register">
+
         <div class="register-form">
-            <h1 id="register-title">Register</h1>
             <form id="form-register" action="/register" method="POST" enctype="multipart/form-data">
                 <label for="firstname">First Name:</label>
                 <input type="text" name="firstname" id="firstname" required>
@@ -29,7 +31,7 @@
                 <label for="cv">CV:</label>
                 <input type="file" name="cv" id="cv">
                 <br>
-                <button type="submit">Register</button>
+                <button type="submit" id="btn-register">Register</button>
             </form>
         </div>
     </div>
